--- a/requirements.txt
+++ b/requirements.txt
@@ -30,9 +30,9 @@ jupyter-core==4.11.1
 kiwisolver==1.4.3
 marshmallow==3.17.0
 matplotlib==3.5.2
+matplotlib-inline==0.1.3
 multidict==6.0.2
 nest-asyncio==1.5.5
-nltk==3.7
 numpy==1.23.1
 packaging==21.3
 pandas==1.4.3
